<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="90dp"
    android:layout_height="180dp"
    android:padding="@dimen/margin_normal">

    <TextView
        android:id="@+id/item_text_temperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder_temperature"
        android:textAlignment="center"
        android:textSize="@dimen/text_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/item_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_sun"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_text_temperature" />

    <TextView
        android:id="@+id/item_text_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_placeholder_hour"
        android:textAlignment="center"
        android:textSize="@dimen/text_normal"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_icon" />

    <TextView
        android:id="@+id/item_text_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/text_placeholder_date"
        android:textAlignment="center"
        android:textColor="@color/light_gray"
        android:textSize="@dimen/text_normal"
        android:layout_marginTop="@dimen/margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_text_hour" />

</androidx.constraintlayout.widget.ConstraintLayout>