<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationError"
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:lottie_speed="1.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/anim_error" />

    <TextView
        android:id="@+id/textErrorDialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/text_placeholder_header"
        android:textAlignment="center"
        android:textColor="@color/light_black"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/lottieAnimationError" />

    <TextView
        android:id="@+id/textErrorDialogDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/text_placeholder_error_description"
        android:textAlignment="center"
        android:textSize="@dimen/text_normal"
        app:layout_constraintTop_toBottomOf="@id/textErrorDialogHeader" />

    <Button
        android:id="@+id/btnOkay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_xlarge"
        android:text="@string/text_button_okay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textErrorDialogDescription" />



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>