<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainFragmentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.MainActivity">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/search"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_search">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_search_hint"
                    android:imeOptions="actionGo"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_animation"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@id/search"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/anim_loading" />

            <ImageView
                android:id="@+id/btnNotification"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:visibility="gone"
                android:layout_marginRight="@dimen/margin_normal"
                android:src="@drawable/ic_notification"
                app:layout_constraintBottom_toBottomOf="@id/search"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/search" />


            <TextView
                android:id="@+id/text_animation_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_xlarge"
                android:text="@string/text_animation_description"
                android:textAlignment="center"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lottie_animation" />

            <TextView
                android:id="@+id/text_sky_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/light_gray"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_weather" />

            <ImageView
                android:id="@+id/image_weather"
                android:layout_width="185dp"
                android:layout_height="185dp"
                android:src="@drawable/ic_sun"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_degrees" />

            <TextView
                android:id="@+id/text_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_min"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/text_sky_state"
                app:layout_constraintTop_toBottomOf="@id/text_sky_state" />

            <TextView
                android:id="@+id/text_min_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_weather"
                app:layout_constraintTop_toTopOf="@id/text_min" />

            <TextView
                android:id="@+id/text_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/text_max"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/text_sky_state"
                app:layout_constraintTop_toBottomOf="@id/text_min" />

            <TextView
                android:id="@+id/text_max_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_weather"
                app:layout_constraintTop_toBottomOf="@id/text_min_value" />

            <TextView
                android:id="@+id/text_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_large"
                android:text=""
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search" />

            <TextView
                android:id="@+id/text_offline_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_xlarge"
                android:layout_marginTop="@dimen/margin_xlarge"
                android:text="@string/text_placeholder_connection_required"
                android:textAlignment="center"
                android:textSize="@dimen/text_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lottie_animation" />

            <TextView
                android:id="@+id/text_degrees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="36sp"
                android:layout_marginBottom="@dimen/margin_normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_city" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="@dimen/margin_normal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/text_max" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShowForecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/text_placeholder_4day_forecast"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recyclerView" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>